fix header z-index

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,6 +24,7 @@ header {
 	width: 100%;
 	height: 92px;
 	max-width: 1920px;
+	z-index: 100;
 }
 
 .headerMainWrap {
